--- a/StudentMgt/.classpath
+++ b/StudentMgt/.classpath
@@ -18,7 +18,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="/home/avi/Downloads/hibernate-release-5.4.10.Final/lib/required/txw2-2.3.1.jar"/>
 	<classpathentry kind="lib" path="/home/avi/Downloads/hibernate-release-5.4.10.Final/lib/required/stax-ex-1.8.jar"/>
 	<classpathentry kind="lib" path="/home/avi/Downloads/hibernate-release-5.4.10.Final/lib/required/jboss-transaction-api_1.2_spec-1.1.1.Final.jar"/>
@@ -38,5 +42,6 @@
 	<classpathentry kind="lib" path="/home/avi/Downloads/hibernate-release-5.4.10.Final/lib/required/byte-buddy-1.10.2.jar"/>
 	<classpathentry kind="lib" path="/home/avi/Downloads/hibernate-release-5.4.10.Final/lib/required/antlr-2.7.7.jar"/>
 	<classpathentry kind="lib" path="/home/avi/Downloads/jar_file/mysql-connector-java-8.0.11.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MySQL8"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
